--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "filmoteka",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://alexandr-nik.github.io/Filmoteka_teamwork",
+  "homepage": "https://alexandr-nik.github.io/Filmoteka_groupProject",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /Filmoteka_teamwork/"
+    "build": "parcel build src/*.html --public-url /Filmoteka_groupProject/"
   },
   "repository": {
     "type": "git",
